--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -67,6 +67,51 @@ section.beers {
 /*
  --
  */
+.overlay {
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  color: #f1f1f1;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+
+  & a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  & a:hover, & a:focus {
+    color: #f1f1f1;
+  }
+
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin: 30px;
+  }
+
+  & .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+}
+
+/*
+ --
+ */
 .footer {
 	position: fixed;
 	top: 3px;
